Add identifier store abstraction